--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
 <br></div>
 
 
-<div class="d-flex flex-wrap">
+<div class="d-flex flex-wrap justify-content-center">
  
   <% @articles.each do |article| %>
      
