--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,7 +3,7 @@
 <br></div>
 
 
-<div class="d-flex flex-wrap">
+<div class="d-flex flex-wrap justify-content-center">
   <% @item.each do |item| %>
      
       <div class="card bg-light mb-3" style="width: 18rem; margin: 10px">
