Added tag section to items form

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,8 +8,11 @@
   <%= simple_format(@item.description) %>
   
 </p>
-
-<%= link_to 'Item List', items_path, class: "btn-sm btn-dark" %>
+Tags:
+<button class="btn-sm btn btn-outline-primary"><%= @item.tags %></button>
+<br>
+<br>
+<%= link_to 'Back to items', items_path, class: " btn btn-sm btn-dark" %>
       <div style= "text-align:center;" class="dropdown">
   <button style="margin-bottom:5px;" class="btn-sm btn-dark dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
     Author Controls
