--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,4 @@
 <%= form_with model: @item, local: true do |form| %>
- 
   <% if @item.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -24,6 +23,11 @@
   <p>
     <%= form.label :description %><br>
     <%= form.text_area :description, class: "form-control" %>
+  </p>
+
+  <p>
+    <%= form.label :tags %><br>
+    <%= form.select :tags, ['Weapon', 'Armor', 'Potion', 'Tool', 'Other'] %>
   </p>
  
   <p>
