--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,30 +1,34 @@
-<div style="background-color: rgba(255, 255, 255, 0.8);;"><h1 style="text-align:center">Homebrew Items
-<div><%= link_to 'New item', new_item_path, class: "btn btn-dark btn-sm" %></h1></div>
-<br></div>
 
+<div style="background-color: rgba(255, 255, 255, 0.8);;">
+<h1 style="text-align:center">Homebrew Items</h1>
 
-<div class="d-flex flex-wrap justify-content-center">
-  <% @item.each do |item| %>
-     
-      <div class="card bg-light mb-3" style="width: 18rem; margin: 10px">
-        <div class="card-body text-center">
-          <%= link_to item.name, item_path(item), class: "card-title btn btn-dark" %>
-        </div>
-
-      <div style= "text-align:center;" class="dropdown">
-  <button style="margin-bottom:5px;" class="btn-sm btn-dark dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Author Controls
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <li><a class="dropdown-item"><%= link_to 'Edit', edit_item_path(item), class: 'btn-sm btn-light' %></a></li>
-    <li><a class="dropdown-item"><%= link_to 'Delete', item_path(item),
-              method: :delete,
-              data: { confirm: 'Are you sure?' }, class: 'btn-sm btn-light' %></a></li>
-  </ul>
+<div>
+<h1 style="text-align:center"><%= link_to 'New item', new_item_path, class: "btn btn-dark btn-sm" %>
+</h1>
 </div>
-              <div class="card-footer text-muted">
-      <%= (shortDesc = truncate(item.description, length: 140))%> <%= link_to '>', item_path(item), class: "btn-sm", style: "text-decoration:none;" %> </div>
-      </div>
+</div>
+<br>
 
-  
-  <% end %>
+<div class="d-flex flex-wrap justify-content-center"><% @item.each do |item| %>
+<div class="card bg-light mb-3" style="width: 18rem; margin: 10px">
+<div class="card-body text-center"><%= link_to item.name, item_path(item), class: "card-title btn btn-dark" %>
+</div>
+
+<div class="dropdown" style="text-align:center;"><button aria-expanded="false" class="btn-sm btn-dark dropdown-toggle" data-bs-toggle="dropdown" id="dropdownMenuButton1" style="margin-bottom:5px;" type="button">Author Controls</button>
+<ul aria-labelledby="dropdownMenuButton1" class="dropdown-menu">
+<li><a class="dropdown-item"><%= link_to 'Edit', edit_item_path(item), class: 'btn-sm btn-light' %></a>
+</li>
+
+<li><a class="dropdown-item"><%= link_to 'Delete', item_path(item),
+              method: :delete,
+              data: { confirm: 'Are you sure?' }, class: 'btn-sm btn-light' %></a>
+</li>
+</ul>
+</div>
+
+<div class="card-footer text-muted"><%= (shortDesc = truncate(item.description, length: 140))%><%= link_to '>', item_path(item), class: "btn-sm", style: "text-decoration:none;" %><br>
+<div class="d-flex justify-content-center"><button onclick="alert('<%= item.tags %> is this item\'s tag! Sort function under construction.')" class="btn-sm btn btn-outline-primary"><%= item.tags %></button></div>
+</div>
+</div>
+<% end %>
+</div>
