--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,8 @@
 <svg xmlns="http://www.w3.org/2000/svg" fill="none" width="10%" viewBox="0 0 24 24" stroke="currentColor">
   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
 </svg>
-<h3>A place to store info for your DnD Campaign</h3>
+<h3>A place to store info for my DnD Campaign</h3>
 </div>
 <div style="text-align:center;">
-<%= link_to 'To the Quests!', {controller: 'articles'}, class: "btn btn-dark" %>
-</div>
+<%= link_to 'Quests', {controller: 'articles'}, class: "btn btn-lg btn-dark" %>
+<%= link_to 'Items', {controller: 'items'}, class: "btn btn-lg btn-dark" %></div>
